--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <outputFile>deploy</outputFile>
+                    <outputDirectory>docker</outputDirectory>
                 </configuration>
             </plugin>
         </plugins>
